# fer_server

./: .gitignore  Cargo.toml  README.md
migrations/2022-10-03-203312_create_users/: down.sql  up.sql
migrations/2022-10-10-175830_create_contacts/: down.sql  up.sql
src/: main.rs  schema.rs
src/auth/: controllers.rs
src/auth/models/: auth.rs  claims.rs  keys.rs  mod.rs
src/contact/: controllers.rs
src/contact/models/: contact.rs
src/user/: controllers.rs
src/user/models/: user.rs
src/utils/: db.rs  error.rs  middleware.rs  mod.rs  validator.rs
