[package]
edition = "2021"
name = "fer-server"
publish = false
version = "0.1.0"

[dependencies]
axum = {version = "0.5.16", features = ["headers"]}
chrono = "0.4"
diesel = {version = "2.0.0", features = ["sqlite"]}
dotenv = "0.15.0"
headers = "0.3"
http-body = "0.4.5"
hyper = "0.14.20"
jsonwebtoken = "8.0"
once_cell = "1.8"
rust-argon2 = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.0", features = ["full"]}
tower = {version = "0.4.13", features = ["util", "filter"]}
tracing = "0.1.34"
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt"]}
validator = {version = "0.14.0", features = ["derive"]}
